# course_work_03

./: README.md  main.py  pyproject.toml
json/: test.json
src/: classes.py  utils.py
tests/: conftest.py  test_utils.py
