[tool.poetry]
name = "course-work-03"
version = "0.1.0"
description = "course work 3"
authors = ["Gleb Skotnikov <skotnikov.nsk@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_03"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
